Analysis/Missing XSB files/build/Installation_summary


            INSTALLATION SUMMARY
            --------------------

XSB Version:	   3.7.
Code name:	   Clan MacGregor
Release date:	   2016-07-06
Configuration:	   x86_64-unknown-linux-gnu
Installation date: Fri Jun  7 22:34:36 PDT 2019

  Build process is looking for XSB sources in:	  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB
  XSB should be installed in:			  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB
  Configuration-specific executables go in:	  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/bin
  Configuration-specific libraries go in:	  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/lib
  Object code goes in:				  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/saved.o
  Site-specific code goes in:			  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/site
  Site configuration-specific code goes in:	  /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/site/config/x86_64-unknown-linux-gnu
  XSB will be built with:			  /usr/include/emsdk/emscripten/1.38.30/emcc  -O4  -D PTHREAD_MUTEX_ERRORCHECK_NP
  builtin.c will be built with: 		  /usr/include/emsdk/emscripten/1.38.30/emcc    -D PTHREAD_MUTEX_ERRORCHECK_NP
  loader_xsb.c will be built with: 		  /usr/include/emsdk/emscripten/1.38.30/emcc    -D PTHREAD_MUTEX_ERRORCHECK_NP
  emuloop.c will be built with: 		  /usr/include/emsdk/emscripten/1.38.30/emcc    -D PTHREAD_MUTEX_ERRORCHECK_NP
  tr_utils.c will be built with:		  /usr/include/emsdk/emscripten/1.38.30/emcc    -D PTHREAD_MUTEX_ERRORCHECK_NP
  Loader flags: 				  -lm -ldl -Wl,-export-dynamic -lpthread
  Compilation mode:				  optimal
  XSB abstract machine: 			  slg-wam
  XSB scheduling strategy:			  local
  Garbage Collection Stress-Test:		  no
  Jumptable-based emulator loop:		  no
  Demand support:                                 no

  Support for modular database drivers: 	  no
  -- These drivers can also be configured later.
  Native support for Oracle:			  no
  Support for the old ODBC driver:		  no

  Java compiler:                                  /usr/bin/javac
  Support for InterProlog's native engine:   	  no
  -- JDK may not have been installed or
  -- JAVA_HOME not set. You will still be able
  -- to use InterProlog's subprocess engine.

  POSIX regexp matching libraries:                yes
  POSIX wildcard matching libraries:              yes

  Curl support (HTTP protocol library):           no
  XPath support:				  yes
  XPath C flags:				  -I/usr/include/libxml2
  XPath loader flags:				  -L/usr/lib -lxml2

  PCRE support (Perl pattern matching):           no


make[1]: Entering directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
-e 
Compiling XSB with /usr/include/emsdk/emscripten/1.38.30/emcc using -O4  -D PTHREAD_MUTEX_ERRORCHECK_NP


Making XSB executable /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/bin/xsb 

-e 	[/usr/include/emsdk/emscripten/1.38.30/emcc] -o /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/bin/xsb -lm -ldl -Wl,-export-dynamic -lpthread 
make[1]: Leaving directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
make[1]: Entering directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
-e 
Compiling XSB with /usr/include/emsdk/emscripten/1.38.30/emcc using -O4  -D PTHREAD_MUTEX_ERRORCHECK_NP

-e 	[/usr/include/emsdk/emscripten/1.38.30/emcc] orient_xsb.c
emcc:WARNING: optimization level '-O4' is not supported; using '-O3' instead
clang: warning: -O4 is equivalent to -O3 [-Wdeprecated]
orient_xsb.c:223:13: error: use of undeclared identifier 'true'
    found = true; // CHANGED from comment above
            ^
orient_xsb.c:224:24: error: array type 'char [1024]' is not assignable
    executable_path_gl = "/config/x86_64-unknown-linux-gnu/bin/xsb"; // CHANGED
    ~~~~~~~~~~~~~~~~~~ ^
2 errors generated.
shared:ERROR: compiler frontend failed to generate LLVM bitcode, halting
Makefile:274: recipe for target 'orient_xsb.o' failed
make[1]: *** [orient_xsb.o] Error 1
make[1]: Leaving directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
make[1]: Entering directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
-e 
Compiling XSB with /usr/include/emsdk/emscripten/1.38.30/emcc using -O4  -D PTHREAD_MUTEX_ERRORCHECK_NP

-e 	[/usr/include/emsdk/emscripten/1.38.30/emcc] orient_xsb.c
emcc:WARNING: optimization level '-O4' is not supported; using '-O3' instead
clang: warning: -O4 is equivalent to -O3 [-Wdeprecated]
orient_xsb.c:223:13: error: use of undeclared identifier 'true'
    found = true; // CHANGED from comment above
            ^
1 error generated.
shared:ERROR: compiler frontend failed to generate LLVM bitcode, halting
Makefile:274: recipe for target 'orient_xsb.o' failed
make[1]: *** [orient_xsb.o] Error 1
make[1]: Leaving directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
make[1]: Entering directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
-e 
Compiling XSB with /usr/include/emsdk/emscripten/1.38.30/emcc using -O4  -D PTHREAD_MUTEX_ERRORCHECK_NP

-e 	[/usr/include/emsdk/emscripten/1.38.30/emcc] orient_xsb.c
emcc:WARNING: optimization level '-O4' is not supported; using '-O3' instead
clang: warning: -O4 is equivalent to -O3 [-Wdeprecated]

Making XSB executable /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/bin/xsb 

-e 	[/usr/include/emsdk/emscripten/1.38.30/emcc] -o /home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/config/x86_64-unknown-linux-gnu/bin/xsb -lm -ldl -Wl,-export-dynamic -lpthread 
make[1]: Leaving directory '/home/quantumech/Desktop/XSB-Web-IDE/Analysis/XSB/emu'
